--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </nav>
     </header>
     <main>
-        <section class="my-5">
+        <section id="#carlupietri" class="my-5">
             <div class="container">
                 <div class="row align-items-center gy-4 gy-md-0">
                     <div class="col-12 col-md-7">
@@ -345,7 +345,7 @@
                     </div>
                     <div class="col">
                         <div class="progress">
-                          <div class="progress-bar" style="width: 26%; background: linear-gradient(to right, #008AFF 0%, #524AB0 100%)" role="progressbar" aria-valuenow="26" aria-valuemin="0" aria-valuemax="100">26%</div>
+                          <div class="progress-bar" style="width: 27%; background: linear-gradient(to right, #008AFF 0%, #524AB0 100%)" role="progressbar" aria-valuenow="27" aria-valuemin="0" aria-valuemax="100">27%</div>
                         </div>
                     </div>
                   </div>
