--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </nav>
     </header>
     <main>
-        <section id="#carlupietri" class="my-5">
+        <section id="carlupietri" class="my-5">
             <div class="container">
                 <div class="row align-items-center gy-4 gy-md-0">
                     <div class="col-12 col-md-7">
