--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
             <div class="container">
                 <div class="row align-items-center gy-4 gy-md-0">
                     <div class="col-12 col-md-7">
-                        <h1 class="fw-bold pe-2">Je m'appelle Carlu et je suis Étudiant en Développement d'applications</h1>
+                        <h1 class="fw-bold pe-2 mt-3 mt-md-0">Je m'appelle Carlu et je suis Étudiant en Développement d'applications</h1>
                         <h2 class="fw-light">Bienvenue sur mon CV en ligne</h2>
-                        <a href="#expertise"><button class="btn btn-primary mt-5 text-light" style="background: linear-gradient(to right, #008AFF 0%, #524AB0 100%)">Mon expertise</button></a>
+                        <a href="#expertise"><button class="btn btn-primary mt-3 mt-md-5 text-light" style="background: linear-gradient(to right, #008AFF 0%, #524AB0 100%)">Mon expertise</button></a>
                     </div>
                     <div class="col-12 col-md-5">
                         <img src="img/Photo_moi.jpeg" alt="Photo de Carlu Pietri" width="100%">
