--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                       <div class="row align-items-center">
                         <div class="col-5 col-sm4 col-md-4 col-xl-3">
                           <div class="d-flex align-items-center">
-                            <embed src="svg/c--4.svg" width="28px" class="filter-green me-3">
+                            <i class="fas fa-hashtag fa-2x me-3 gradient-text"></i>
                             <p class="fw-bold m-0">C#</p>
                           </div>
                         </div>
