--- a/index.html
+++ b/index.html
@@ -394,14 +394,30 @@
                 </div>
               </div></a>
 
+              <h3 class="my-5 fw-light fs-5"><i class="fas fa-briefcase me-2"></i> Expérience professionnelle</h3>
+
+              <a href="https://www.goodbarber.com/" target="Starfall" class="link-dark text-decoration-none"><div class="col-12 schools">
+                <h3 class="fw-light fs-5 mb-3 school-link">GoodBarber - Développement d'une application sur Django (2021)</h3>
+                <div class="content-section mb-3 bg-white p-3">
+                  <div class="row align-items-center">
+                    <div class="col-12">
+                      <div class="d-flex align-items-center">
+                        <img class="fa-2x me-3 text-dark rounded-circle" alt="svgImg" filter="gray" width="50px"src="img/logo-gb.jpg"/>
+                        <p class="fw-bold m-0 school-link">Stage de fin de formation</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div></a>
+
               <a href="https://www.whatiseat.com/" target="Starfall" class="link-dark text-decoration-none"><div class="col-12 schools">
-                <h3 class="fw-light fs-5 mb-3 school-link">WhatisEAT - Cartes & menu digitalisés</h3>
+                <h3 class="fw-light fs-5 mb-3 school-link">WhatisEAT - Développeur Django/Python (2022)</h3>
                 <div class="content-section mb-3 bg-white p-3">
                   <div class="row align-items-center">
                     <div class="col-12">
                       <div class="d-flex align-items-center">
                         <img class="fa-2x me-3 text-dark" alt="svgImg" filter="gray" width="50px"src="img/logo-whatiseat.jpg"/>
-                        <p class="fw-bold m-0 school-link">Développeur Django/Python en alternance</p>
+                        <p class="fw-bold m-0 school-link">Contrat en alternance</p>
                       </div>
                     </div>
                   </div>
